fixed positioning of rotate buttons on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ body {
 
 .ui-button {
   position: relative;
-  top: 350px;
+  top: 35vh;
   cursor: pointer;
   background-color: lightgrey;
   border: 0px solid;
